src/test/ui/issues/issue-19380.stderr
error[E0038]: the trait `Qiz` cannot be made into an object
  --> $DIR/issue-19380.rs:11:9
   |
LL |   foos: &'static [&'static (dyn Qiz + 'static)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Qiz` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-19380.rs:2:6
   |
LL | trait Qiz {
   |       --- this trait cannot be made into an object...
LL |   fn qiz();
   |      ^^^ ...because associated function `qiz` has no `self` parameter
help: consider turning `qiz` into a method by giving it a `&self` argument
   |
LL |   fn qiz(&self);
   |          ^^^^^
help: alternatively, consider constraining `qiz` so it does not apply to trait objects
   |
LL |   fn qiz() where Self: Sized;
   |            ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
